--- a/.gitignore
+++ b/.gitignore
@@ -1,87 +1,10 @@
-# Arduino IDE
-*.hex
-*.eep
-*.elf
-*.bin
+# PlatformIO
+.pio/
+.vscode/.browse.c_cpp.db*
+.vscode/c_cpp_properties.json
+.vscode/launch.json
+.vscode/ipch
 
-# CodeQL
-_codeql_detected_source_root
-
-# Build artifacts
-*.o
-*.d
-*.a
-*.so
-*.dylib
-*.dll
-
-# Compiled files
-build/
-dist/
-*.pyc
-__pycache__/
-
-# IDE
-.idea/
-*.swp
-*.swo
-*~
-.DS_Store
-Thumbs.db
-
-# Logs
-*.log
-
-# Temporary files
-tmp/
-temp/
-*.tmp
-
-# Configuration (may contain sensitive data)
-# Uncomment if you want to exclude personal WiFi credentials
-# src/config.h
-
-# LittleFS/SPIFFS data (optional - uncomment if you want to exclude)
-# data/
-
-# Backup files
-*.bak
-*.backup
-*~
-
-# OS specific
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Desktop.ini
-
-# Package manager
-node_modules/
-vendor/
-
-# Python virtual environment
-venv/
-env/
-ENV/
-
-# Test coverage
-coverage/
-*.coverage
-
-# Documentation build
-docs/_build/
-docs/.doctrees/
-
-# Certificates and keys
-*.pem
-*.key
-*.cert
-*.crt
-
-# Local settings
-local_settings.py
-settings_local.py
-
-# Upload tools
-upload_port
-monitor_port
+# Libraries (installed automatically via platformio.ini)
+lib/AsyncTCP/
+lib/ESPAsyncWebServer/
