Complete feature implementation: CSS colors, Verdana font, improved auto-sizing, layout repositioning, complete Q-SYS plugin

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,10 @@ lib_deps =
     adafruit/Adafruit GFX Library@^1.11.9
     bblanchon/ArduinoJson@^6.21.5
 
+lib_ignore = 
+    AsyncTCP_RP2040W
+    ESPAsyncTCP
+    
 ; Filesystem
 board_build.filesystem = littlefs
 board_build.partitions = default.csv
