--- a/platformio.ini
+++ b/platformio.ini
@@ -20,10 +20,11 @@ lib_deps =
     ESP32 HUB75 LED MATRIX PANEL DMA Display@^3.0.9
     adafruit/Adafruit GFX Library@^1.11.9
     bblanchon/ArduinoJson@^6.21.5
+    esp32async/ESPAsyncWebServer@^3.10.0
+    esp32async/AsyncTCP@^3.3.2
 
 lib_ignore = 
     AsyncTCP_RP2040W
-    ESPAsyncTCP
     
 ; Filesystem
 board_build.filesystem = littlefs
