fix(firmware): replace AsyncUDP with BSD sockets for ETH/LAN8720 compatibility

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,9 +10,8 @@ monitor_filters = esp32_exception_decoder
 ; Upload settings
 upload_speed = 921600
 
-; Build flags
+; Build flags (BOARD_HAS_PSRAM removed - this board has no PSRAM)
 build_flags = 
-    -DBOARD_HAS_PSRAM
     -mfix-esp32-psram-cache-issue
     
 ; Required libraries
