feat(firmware): NO_DISPLAY mode + JSON web UI + /api/segments live polling

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,8 +11,11 @@ monitor_filters = esp32_exception_decoder
 upload_speed = 921600
 
 ; Build flags (BOARD_HAS_PSRAM removed - this board has no PSRAM)
+; NO_DISPLAY=1 skips HUB75 matrix init — web UI and UDP still work fully.
+; Remove -DNO_DISPLAY when a physical LED panel is connected.
 build_flags = 
     -mfix-esp32-psram-cache-issue
+    -DNO_DISPLAY
     
 ; Required libraries
 lib_deps = 
