Add NO_DISPLAY mode to prevent bus error on Rock Pi S
- Import os module and detect LED_MATRIX_NO_DISPLAY env variable
- Skip RGBMatrix initialization when NO_DISPLAY=1
- Service runs UDP handler and web server without hardware access
- Updated led-matrix.service with commented Environment line
- Created BUS_ERROR_FIX.md with troubleshooting guide
- Documents three solutions: NO_DISPLAY, custom hardware mapping, kernel module

--- a/rockpis/led-matrix.service
+++ b/rockpis/led-matrix.service
@@ -13,6 +13,10 @@ RestartSec=5
 StandardOutput=journal
 StandardError=journal
 
+# Uncomment to run in NO_DISPLAY test mode (no bus error, but no physical display)
+# Useful for testing UDP/Web functionality without hardware
+# Environment="LED_MATRIX_NO_DISPLAY=1"
+
 # Allow the process to access /dev/mem and GPIO
 PrivateDevices=no
 PrivateTmp=yes
