esp32: port firmware to WT32-ETH01
- config.h: full rewrite for WT32-ETH01 pin assignment
    R1=2 G1=15 B1=4  R2=5 G2=17 B2=12
    A=33 B=32  C=13  D=14  E=-1
    CLK=16 LAT=1 OE=-1 (I2S-managed)
  GPIO16 reused as CLK after ETH.begin() (LAN8720 nRST has board pull-up)
  GPIO1 (UART TX) reused as LAT after boot log completes

- main.cpp: update ETH.begin() for WT32-ETH01
    PHY addr=1, power=-1, MDC=23, MDIO=18, ETH_CLOCK_GPIO0_IN
  Change hostname from olimex-led-matrix to wt32-led-matrix

- platformio.ini: remove -DNO_DISPLAY (physical panel connected)
  Change upload_port to COM3 (Silicon Labs CP210x on WT32-ETH01)"

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,13 +9,12 @@ monitor_filters = esp32_exception_decoder
 
 ; Upload settings
 upload_speed = 921600
+upload_port = COM3
 
-; Build flags (BOARD_HAS_PSRAM removed - this board has no PSRAM)
-; NO_DISPLAY=1 skips HUB75 matrix init — web UI and UDP still work fully.
-; Remove -DNO_DISPLAY when a physical LED panel is connected.
+; Build flags
+; -DNO_DISPLAY has been removed — physical HUB75 panel is connected on WT32-ETH01.
 build_flags = 
     -mfix-esp32-psram-cache-issue
-    -DNO_DISPLAY
     
 ; Required libraries
 lib_deps = 
