--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
-[env:esp32dev]
+[env:wt32-eth01]
 platform = espressif32
-board = esp32dev
+board = wt32-eth01
 framework = arduino
 
 ; Monitor settings
@@ -12,10 +12,10 @@ upload_speed = 921600
 upload_port = COM3
 
 ; Build flags
-; -DNO_DISPLAY has been removed — physical HUB75 panel is connected on WT32-ETH01.
-build_flags = 
-    -mfix-esp32-psram-cache-issue
-    
+build_flags =
+    -DBOARD_HAS_PSRAM=0
+    -DNO_DISPLAY          ; Remove when HUB75 panel is physically connected
+
 ; Required libraries
 lib_deps = 
     ESP32 HUB75 LED MATRIX PANEL DMA Display@^3.0.9
@@ -29,4 +29,4 @@ lib_ignore =
     
 ; Filesystem
 board_build.filesystem = littlefs
-board_build.partitions = default.csv
+board_build.partitions = no_ota.csv
