--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,10 @@ upload_port = COM3
 ; Build flags
 build_flags =
     -DBOARD_HAS_PSRAM=0
+    ; ETH_CLK_MODE is already defined by the wt32-eth01 board variant (GPIO0_OUT).
+    ; ETH_PHY_ADDR=1 is the LAN8720 MDIO address strapped on WT32-ETH01.
+    ; We declare it here so ETH.begin() default-arg fallback always uses addr=1.
+    -DETH_PHY_ADDR=1
 
 ; Required libraries
 lib_deps = 
