--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,10 @@
 [env:wt32-eth01]
-platform = espressif32
-board = wt32-eth01
+; IMPORTANT: Using Arduino framework 1.0.6 for AsyncTCP compatibility
+; AsyncTCP libraries are not yet compatible with Arduino-ESP32 2.0+/3.0+
+; Using esp32dev board  (generic ESP32) as wt32-eth01 wasn't defined until later versions
+; See README.md "ESP32 firmware won't compile" in Troubleshooting section
+platform = espressif32@3.5.0
+board = esp32dev
 framework = arduino
 
 ; Monitor settings
@@ -18,14 +22,16 @@ build_flags =
     ; ETH_PHY_ADDR=1 is the LAN8720 MDIO address strapped on WT32-ETH01.
     ; We declare it here so ETH.begin() default-arg fallback always uses addr=1.
     -DETH_PHY_ADDR=1
+    ; Uncomment to disable HUB75 matrix init (for testing without connected panel):
+    ; -DNO_DISPLAY
 
 ; Required libraries
 lib_deps = 
     ESP32 HUB75 LED MATRIX PANEL DMA Display@^3.0.9
     adafruit/Adafruit GFX Library@^1.11.9
     bblanchon/ArduinoJson@^6.21.5
-    esp32async/ESPAsyncWebServer@^3.10.0
-    esp32async/AsyncTCP@^3.3.2
+    https://github.com/me-no-dev/ESPAsyncWebServer.git
+    https://github.com/me-no-dev/AsyncTCP.git
 
 lib_ignore = 
     AsyncTCP_RP2040W
