Document final stable configuration and add troubleshooting guide
- Updated README.md with detailed Display Performance section
  - Documented stable settings: gpio_slowdown=2, PWM bits=7, scan mode=0
  - Added font threshold=128 for sharp binary rendering
  - Hardware compatibility notes (RPi 4/Zero 2 W)

- Added comprehensive Troubleshooting section
  - Display flickering diagnosis (software + hardware solutions)
  - Font quality adjustment guidance
  - Service debugging commands
  - Adafruit HUB75 adapter recommendation for signal quality

- Updated install.sh completion message with current configuration

- Added deployment automation scripts (*.exp)
  - deploy-with-password.exp, deploy-config.exp, deploy-text-renderer.exp
  - check-cpu.exp, check-logs.exp, verify-deployment.exp

- Added hardware documentation (HUB75_WIRING_MAP.md, VERIFIED_PINOUT.md)

Configuration tested extensively on RPi 4 @ 10.1.1.25

--- a/rpi/led-matrix.service
+++ b/rpi/led-matrix.service
@@ -13,6 +13,13 @@ RestartSec=5
 StandardOutput=journal
 StandardError=journal
 
+# Performance optimizations
+Nice=-10
+CPUSchedulingPolicy=fifo
+CPUSchedulingPriority=50
+IOSchedulingClass=realtime
+IOSchedulingPriority=0
+
 # Allow the process to access /dev/mem and GPIO
 PrivateDevices=no
 PrivateTmp=yes
