Node-RED v2.0: Simplified with dedicated nodes and easier message format
BREAKING CHANGES - Much Easier to Use! 🎉

Major Improvements:
- Split into 4 specialized nodes instead of 1 complex node
- Simplified message format: msg.layout instead of msg.command+msg.preset
- Per-segment text nodes for visual clarity
- Dedicated nodes: text, layout, brightness, clear

New Node Types:
✅ led-matrix-text - Display text on segments
✅ led-matrix-layout - Switch layouts with msg.layout
✅ led-matrix-brightness - Control with msg.brightness
✅ led-matrix-clear - Clear segments or all

Simplified Message Format:
Before: msg.command='layout'; msg.preset=7
After:  msg.layout=7  ← Much cleaner!

Before: msg.command='brightness'; msg.brightness=128
After:  msg.brightness=128  ← Direct!

Per-Segment Control:
- Create 4 text nodes (one per segment)
- Visual separation in flows
- Easier to manage complex displays

Files Changed:
- led-matrix.js - 4 node types with shared UDP client
- led-matrix.html - Individual node templates
- package.json - v2.0.0, all node types registered
- examples-simplified.json - New examples with simpler patterns
- README-v2.md - Complete v2.0 documentation

Migration from v1.0:
- Old nodes still work (backward compatible internally)
- Recommend upgrading to v2.0 nodes for simplicity
- Import examples-simplified.json for new patterns

Benefits:
✅ Easier to understand
✅ Faster to configure
✅ Visual clarity in flows
✅ Less typing (msg.layout vs msg.command+msg.preset)
✅ Dedicated node per function

--- a/NODERED-LED-Matrix/package.json
+++ b/NODERED-LED-Matrix/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-led-matrix",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Node-RED node for controlling 64x32 RGB LED Matrix panels via UDP (compatible with QSYS-LED-Matrix RPi controller)",
   "keywords": [
     "node-red",
@@ -19,7 +19,10 @@
   },
   "node-red": {
     "nodes": {
-      "led-matrix": "led-matrix.js"
+      "led-matrix-text": "led-matrix.js",
+      "led-matrix-layout": "led-matrix.js",
+      "led-matrix-brightness": "led-matrix.js",
+      "led-matrix-clear": "led-matrix.js"
     }
   },
   "dependencies": {},
