Fix network DHCP/static handling + Web UI updates
- Fixed DHCP fallback logic: flush existing fallback IP before waiting for DHCP
- Changed interface from eth0 → eth1 (active NIC with DHCP)
- Added NetworkManager-wait-online dependency to systemd service
- Web UI: Changed background to rgb(23,136,202) blue theme
- Web UI: Updated button gradients to match blue theme
- Web UI: Added PKE white logo centered at top
- Web UI: Network settings now apply immediately via nmcli (no reboot needed)
- Web UI: Added IP change feedback with auto-redirect to new URL
- Added sudoers for daemon user: passwordless reboot + nmcli
- Auto-disable segment 1 white frame on first UDP command
- Fixed raw string literal delimiter (R"HTMLDOC(...)HTMLDOC")

--- a/rpiC++/led-matrix.service
+++ b/rpiC++/led-matrix.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=RGB LED Matrix Controller
-After=network-online.target
+After=network-online.target NetworkManager-wait-online.service
 Wants=network-online.target
 
 [Service]
